--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+server.port=8082
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.username=rocky
+spring.datasource.password=s
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=postgresql
+spring.jpa.hibernate.ddl-auto=update
+hibernate.hbm2ddl.auto = update
+spring.web.resources.static-locations=classpath:/static/ , file:/static/uploads/ , classpath:/templates/
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sudipmanandhar2560@gmail.com
+spring.mail.password=nbqi frdv kszx nela
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
