--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.mail.username=sudipmanandhar2560@gmail.com
 spring.mail.password=nbqi frdv kszx nela
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+jwt.secret=x8R!Tz92@K7dLw$3fS1hY0#qPnZ2UvJr
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
