authorization issues arise and finx is in progress

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ jwt.secret=x8R!Tz92@K7dLw$3fS1hY0#qPnZ2UvJr
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+
+logging.level.org.springframework.security=DEBUG
