--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.thymeleaf.suffix=.html
 
 
 logging.level.org.springframework.security=DEBUG
+
+#logging.level.org.springframework.http.converter.json=DEBUG
